opam-version: "1.2"
name: "dmlenu"
version: "0.1"
maintainer: "opam-devel@lists.ocaml.org"
authors: [ "Simon Castellan"
           "Thomas Refis" ]
license: "MIT"
homepage: "http://the-lambda-church.github.io/dmlenu/"
dev-repo: "https://github.com/the-lambda-church/dmlenu.git"
bug-reports: "https://github.com/the-lambda-church/dmlenu/issues"
doc: "http://the-lambda-church.github.io/dmlenu/doc"
tags: [ "clib:Xinerama" "clib:X11" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-doc: [ make "doc" ]
depends: [
  "base"
  "stdio"
  "jbuilder" {build}
  "ocamlfind" {build}
]
available: [ ocaml-version >= "4.00.1" ]
